--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,17 @@
 name: CI
 on:
   push:
-    branches:
-      - main
-      - develop*
-    paths-ignore:
-      - '**.md'
-  pull_request:
-    branches:
-      - main
-      - develop
-    paths-ignore:
-      - '**.md'
+    # branches:
+    #   - main
+    #   - develop*
+    # paths-ignore:
+    #   - '**.md'
+  # pull_request:
+  #   branches:
+  #     - main
+  #     - develop
+  #   paths-ignore:
+  #     - '**.md'
 jobs:
   test:
     name: Test
